<resources>
    <string name="app_name">SeniorDesignProject</string>
    <!-- Main Activity -->
    <string name="str_main_Welcome">Welcome</string>
    <string name="str_main_Weather">Weather</string>
    <string name="str_main_TempExample">30C</string>
    <string name="str_main_DateExample">01.01.2022</string>
    <string name="str_main_WeatherType">Clear</string>
    <string name="str_main_Agenda">Agenda</string>
    <string name="str_main_Crops">Crops</string>
    <string name="str_main_Animals">Animals</string>
    <string name="str_main_GeneralInformation">General Information</string>
    <string name="str_main_Settings">Settings</string>
    <!-- Weather Activity -->
    <string name="str_weather_today">Today</string>
    <string name="str_weather_tomorrow">Tomorrow</string>
    <string name="str_weather_nextweek">Next Week</string>
    <string name="str_weather_weather">Weather</string>
    <!-- Agenda Activity -->
    <string name="str_agenda_Calendar">Calendar</string>
    <string name="str_agenda_TodoList">To-Do List</string>
    <string name="str_agenda_Notes">Notes</string>
    <string name="str_agenda_Inventory">Inventory</string>
    <!-- Calendar Activity -->
    <string name="str_calendar_New">New</string>
    <!-- Calendar_new_event Activity -->
    <string name="str_calendar_new_event_Empty">empty</string>
    <string name="str_calendar_new_event_Date">Date:</string>
    <string name="str_calendar_new_event_Task">Task:</string>
    <string name="str_calendar_new_event_SelectField">Select Field</string>
    <string name="str_calendar_new_event_AddEvent">Add Event</string>
    <!-- Calendar_event_details Activity -->
    <string name="str_calendar_event_details_SelectField">Select Field</string>
    <string name="str_calendar_event_details_Date">Date</string>
    <string name="str_calendar_event_details_Task">Task</string>
    <string name="str_calendar_event_details_Save">Save</string>
    <string name="str_calendar_event_details_Cancel">Cancel</string>
    <string name="str_calendar_event_details_DeleteEvent">Delete Event</string>


    <!-- Crops Activity -->
    <string name="str_crops_new">new</string>
    <!-- Crops Add  - Crops Detailed Activity -->
    <string name="str_crop_type">Crop Type:</string>
    <string name="str_crop_acres">Acres:</string>
    <string name="str_crop_total_tree">Tree Number:</string>
    <string name="str_crop_empty_hint">empty</string>
    <string name="str_crop_add">Add</string>
    <string name="str_crop_save_changes">Save Changes</string>
    <string name="str_crop_empty">empty</string>
    <string name="str_crop_name">Name:</string>
    <!-- Crops Card View -->
    <string name="str_crops_cardView_acres">Acres</string>
    <!-- Animals Activity -->
    <string name="str_animals_AddAnimals">Add Animals</string>
    <!-- Animal_add Activity -->
    <string name="str_animals_add_Type">Type</string>
    <string name="str_animals_add_Number">Number</string>
    <string name="str_animals_add_Name">Name</string>
    <string name="str_animals_add_AddFeature">Add Feature</string>
    <string name="str_animals_add_Confirm">Confirm</string>
    <!-- Animals_Detailed Activity -->
    <string name="str_animals_detailed_AddFeature">Add Feature</string>
    <string name="str_animals_detailed_Delete">Delete</string>
    <string name="str_animals_detailed_ToDo">To-Do</string>
    <string name="str_animals_detailed_Notes">Notes</string>
    <!-- Animals_to_do Activity -->
    <string name="str_animals_to_do_Add">Add</string>

    <!-- Animals_Detailed_Edit Activity -->
    <string name="str_animals_detailed_edit_Feature">Feature</string>
    <string name="str_animals_detailed_edit_Value">Value</string>
    <string name="str_animals_detailed_edit_Delete">Delete Feature</string>
    <string name="str_animals_detailed_edit_Cancel">Cancel</string>
    <string name="str_animals_detailed_edit_Save">Save</string>

    <!-- Notes_general Activity -->
    <string name="str_notes_general_NewNote">New Note</string>

    <!-- Notes Activity -->
    <string name="str_notes_NewNote">New Note</string>

    <!-- Notes_new Activity -->
    <string name="str_notes_new_Confirm">Confirm</string>
    <string name="str_notes_new_Cancel">Cancel</string>
    <string name="str_notes_new_Note">Note</string>

    <!-- General Information Activity -->

    <!-- Settings Activity -->
    <string name="str_settings_signout">Sign Out</string>

    <!-- Login Activity -->
    <string name="str_login_email">E-mail</string>
    <string name="str_login_password">Password</string>
    <string name="str_login_login">Login</string>
    <string name="str_login_forget_password">Forget my password</string>

    <!-- Register Activity -->
    <string name="str_register_name">Name</string>
    <string name="str_register_email">E-mail</string>
    <string name="str_register_password">Password</string>
    <string name="str_register_create_account">Create Account</string>
    <string name="str_register_already_have_account">Already have an account?</string>


</resources>