<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="match_parent"
    tools:context=".CropsDetailedEdit"
    android:layout_width="match_parent">

    <include
        android:id="@+id/toolbar_crops_detailed_edit"
        layout="@layout/toolbar" />

    <EditText
        android:id="@+id/crops_detailed_edit_Value_pt"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/str_animals_detailed_edit_Value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_crops_detailed_edit" />

    <Button
        android:textStyle="bold"
        android:textColor="@color/white"
        android:stateListAnimator="@null"
        app:cornerRadius="18dp"
        android:backgroundTint="#9975A347"
        android:id="@+id/crops_detailed_edit_Save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:text="@string/str_animals_detailed_edit_Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crops_detailed_edit_Delete_btn"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:textStyle="bold"
        android:textColor="@color/white"
        android:stateListAnimator="@null"
        app:cornerRadius="18dp"
        android:backgroundTint="#99DE3E25"
        android:id="@+id/crops_detailed_edit_Cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_animals_detailed_edit_Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/crops_detailed_edit_Save_btn"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crops_detailed_edit_Delete_btn"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:textStyle="bold"
        android:textColor="@color/white"
        android:stateListAnimator="@null"
        app:cornerRadius="18dp"
        android:backgroundTint="#99DE3E25"
        android:id="@+id/crops_detailed_edit_Delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/str_animals_detailed_edit_Delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crops_detailed_edit_Features_pt" />

    <EditText
        android:id="@+id/crops_detailed_edit_Features_pt"
        android:layout_width="173dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/str_animals_detailed_edit_Feature"
        app:layout_constraintEnd_toStartOf="@+id/crops_detailed_edit_Value_pt"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_crops_detailed_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
