<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CropsAdd">

    <EditText
        android:id="@+id/cropsAdd_cropType_pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/str_crop_empty_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cropsAdd_cropType_tv"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_crops_add" />

    <include
        android:id="@+id/toolbar_crops_add"
        layout="@layout/toolbar" />

    <Button
        android:id="@+id/cropsAdd_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_crop_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cropsAdd_cropType_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/str_crop_type"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/cropsAdd_cropType_pt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_crops_add" />

    <TextView
        android:id="@+id/cropsAdd_acres_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/str_crop_acres"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/cropsAdd_acres_pt"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cropsAdd_cropType_tv" />

    <TextView
        android:id="@+id/cropsAdd_treeNumber_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/str_crop_total_tree"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/cropsAdd_treeNumber_pt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cropsAdd_acres_tv" />

    <EditText
        android:id="@+id/cropsAdd_acres_pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/str_crop_empty_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cropsAdd_cropType_pt" />

    <EditText
        android:id="@+id/cropsAdd_treeNumber_pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/str_crop_empty_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cropsAdd_treeNumber_tv"
        app:layout_constraintTop_toBottomOf="@+id/cropsAdd_acres_pt" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/str_crop_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/cropsAdd_name_pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cropsAdd_treeNumber_tv" />

    <EditText
        android:id="@+id/cropsAdd_name_pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/str_crop_empty_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/cropsAdd_treeNumber_pt" />

</androidx.constraintlayout.widget.ConstraintLayout>