<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AnimalsDetailedEdit">

        <include
            android:id="@+id/toolbar_animals_detailed_edit"
            layout="@layout/toolbar" />

        <EditText
            android:id="@+id/animals_detailed_edit_Value_pt"
            android:layout_width="200dp"
            android:layout_height="49dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/str_animals_detailed_edit_Value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_animals_detailed_edit" />

        <Button
            android:id="@+id/animals_detailed_edit_Cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="#99DE3E25"
            android:stateListAnimator="@null"
            android:text="@string/str_animals_detailed_edit_Cancel"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="18dp"
            app:layout_constraintEnd_toStartOf="@+id/animals_detailed_edit_Save_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animals_detailed_edit_Features_pt" />

        <Button
            android:id="@+id/animals_detailed_edit_Save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="#9975A347"
            android:stateListAnimator="@null"
            android:text="@string/str_animals_detailed_edit_Save"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/animals_detailed_edit_Cancel_btn"
            app:layout_constraintTop_toBottomOf="@+id/animals_detailed_edit_Value_pt" />

        <Button
            android:id="@+id/animals_detailed_edit_Delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="#99DE3E25"
            android:stateListAnimator="@null"
            android:text="@string/str_animals_detailed_edit_Delete"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animals_detailed_edit_Cancel_btn" />

        <EditText
            android:id="@+id/animals_detailed_edit_Features_pt"
            android:layout_width="173dp"
            android:layout_height="49dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/str_animals_detailed_edit_Feature"
            app:layout_constraintEnd_toStartOf="@+id/animals_detailed_edit_Value_pt"
            app:layout_constraintHorizontal_bias="0.727"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_animals_detailed_edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
